other-mpol/disable-service-discovery/.kyverno-test/baseline-resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: baseline-pod, namespace: team-a}
spec: {containers: [{name: app, image: nginx:latest}]}
