other-mpol/disable-service-discovery/.kyverno-test/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata: {name: exception, namespace: policy-exceptions}
spec:
  policyRefs: [{name: disable-service-discovery, kind: MutatingPolicy}]
  matchConditions: [{name: exact, expression: object.metadata.namespace == 'team-a' && object.metadata.name == 'exception-pod'}]
